--- a/src/main/resources/templates/tabelaInicio.html
+++ b/src/main/resources/templates/tabelaInicio.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap CRUD Data Table for Database with Modal Form</title>
+<title>RDC - Registro de Cartórios</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -236,29 +236,38 @@
 	}	
 </style>
 <script>
-$(document).ready(function(){
-	// Activate tooltip
-	$('[data-toggle="tooltip"]').tooltip();
+
+
+(function($) {
+	  $.fn.inputFilter = function(inputFilter) {
+	    return this.on("input keydown keyup mousedown mouseup select contextmenu drop", function() {
+	      if (inputFilter(this.value)) {
+	        this.oldValue = this.value;
+	        this.oldSelectionStart = this.selectionStart;
+	        this.oldSelectionEnd = this.selectionEnd;
+	      } else if (this.hasOwnProperty("oldValue")) {
+	        this.value = this.oldValue;
+	        this.setSelectionRange(this.oldSelectionStart, this.oldSelectionEnd);
+	      } else {
+	        this.value = "";
+	      }
+	    });
+	  };
+	}(jQuery));
 	
-	// Select/Deselect checkboxes
-	var checkbox = $('table tbody input[type="checkbox"]');
-	$("#selectAll").click(function(){
-		if(this.checked){
-			checkbox.each(function(){
-				this.checked = true;                        
-			});
-		} else{
-			checkbox.each(function(){
-				this.checked = false;                        
-			});
-		} 
-	});
-	checkbox.click(function(){
-		if(!this.checked){
-			$("#selectAll").prop("checked", false);
-		}
-	});
-});
+	
+$(document).ready(function(){
+$("#intTextBox1").inputFilter(function(value) {
+	  return /^-?\d*$/.test(value); });
+$("#intTextBox2").inputFilter(function(value) {
+	  return /^-?\d*$/.test(value); });
+
+$("#intTextBox3").inputFilter(function(value) {
+	  return /^-?\d*$/.test(value); });
+}
+
+
+
 </script>
 </head>
 <body>
@@ -268,23 +277,17 @@ $(document).ready(function(){
 				<div class="table-title">
 					<div class="row">
 						<div class="col-xs-6">
-							<h2>Registro de  <b>Cartorios</b></h2>
+							<h2>Registro de  <b>Cartórios</b></h2>
 						</div>
 						<div class="col-xs-6">
-							<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Adicionar novo Cartorio</span></a>
-							<a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>apagar selecionados</span></a>						
+							<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Adicionar novo Cartório</span></a>
 						</div>
 					</div>
 				</div>
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
-							<th>
-								<span class="custom-checkbox">
-									<input type="checkbox" id="selectAll">
-									<label for="selectAll"></label>
-								</span>
-							</th>
+						    <th>Id</th>
 							<th>Nome</th>
 							<th>Endereço</th>
 							<th>Certidões</th>
@@ -293,15 +296,10 @@ $(document).ready(function(){
 					</thead>
 					<tbody>
 						<tr th:each="cartorio: ${cartorios}">
-							<td>
-								<span class="custom-checkbox">
-									<input type="checkbox" id="checkbox1" name="options[]" value="1">
-									<label for="checkbox1"></label>
-								</span>
-							</td>
-							<td th:text="${cartorio.nome}" >Monkey D. Luffy </td>
-							<td th:text="${cartorio.endereco}">89 Chiaroscuro Rd, Portland, USA</td>
-							<td th:text="${cartorio.certidoes}" >(171) 555-2222</td>
+							<td  th:text="${cartorio.id}" ></td>
+							<td th:text="${cartorio.nome}" ></td>
+							<td th:text="${cartorio.endereco}"></td>
+							<td th:text="${cartorio.certidoes}" ></td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
@@ -320,28 +318,32 @@ $(document).ready(function(){
 	<div id="addEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form action="cartorio/novo"  method="post">
+				<form action="novo/cartorio"  method="post">
 					<div class="modal-header">						
-						<h4 class="modal-title">Adicionar um novo Cartorio</h4>
+						<h4 class="modal-title">Adicionar um novo Cartório</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
-					<div class="modal-body">					
+					<div class="modal-body">
+						<div class="form-group">
+							<label>ID</label>
+							<input id="intTextBox1"  name="id" type="text" class="form-control" required>
+						</div>				
 						<div class="form-group">
 							<label>Nome</label>
 							<input name="nome" type="text" class="form-control" required>
 						</div>
 						<div class="form-group">
 							<label>Endereço</label>
-							<textarea  name="endereco" class="form-control" required></textarea>
+							<textarea name="endereco"  class="form-control" required></textarea>
 						</div>
 						<div class="form-group">
 							<label>Certidões</label>
-							<input type="text" name="certidoes"  class="form-control" required>
+							<input  name="certidoes" type="text"   class="form-control" required>
 						</div>					
 					</div>
 					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-success" value="Add">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+						<input type="submit" class="btn btn-success" value="Adiconar">
 					</div>
 				</form>
 			</div>
@@ -351,39 +353,44 @@ $(document).ready(function(){
 	<div id="editEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form>
+				<form  action="atualizacao/editar" method="post">
 					<div class="modal-header">						
-						<h4 class="modal-title">Editar Cartorio</h4>
+						<h4 class="modal-title">Editar Cartório</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
-					<div class="modal-body">					
+					<div class="modal-body">
+					<div class="form-group">
+							<label>ID -Correspondente ao cartório a ser editado.</label>
+							<input  name="id" type="number" class="form-control intTextBox" required>
+						</div>					
 						<div class="form-group">
 							<label>Nome</label>
-							<input type="text" class="form-control" required>
+							<input name="nome" type="text" class="form-control" required>
 						</div>
 						
 						<div class="form-group">
 							<label>Endereço</label>
-							<textarea class="form-control" required></textarea>
+							<textarea name="endereco" class="form-control" required></textarea>
 						</div>
 						<div class="form-group">
 							<label>Certidões</label>
-						<textarea class="form-control" required></textarea>
+						<textarea name="certidoes" class="form-control" required></textarea>
 						</div>					
 					</div>
 					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-info" value="Save">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+						<input type="submit" class="btn btn-info" value="Salvar">
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
+	
 	<!-- Delete Modal HTML -->
 	<div id="deleteEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form>
+				<form action="exclusao/excluir" method="post">
 					<div class="modal-header">						
 						<h4 class="modal-title">Apagar Cartorio</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -391,10 +398,17 @@ $(document).ready(function(){
 					<div class="modal-body">					
 						<p>Tem certeza que deseja fazer isto?</p>
 						<p class="text-warning"><small>Esta ação não pode ser desfeita</small></p>
+						
+						<div class="form-group">
+							<label>ID - Correspondente ao cartorio a ser apagado.</label>
+							<input  name="id" type="number" class="form-control intTextBox" required>
+						</div>	
 					</div>
+					
+					
 					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-danger" value="Delete">
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancelar">
+						<input type="submit" class="btn btn-danger" value="Deletar">
 					</div>
 				</form>
 			</div>
